kubernetes/depictio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: depictio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: depictio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          args:
            ["mongod", "--dbpath", "/data/depictioDB", "--port", "27018"]
          ports:
            - containerPort: 27018
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/depictioDB
      volumes:
        - name: mongo-storage
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: depictio
spec:
  type: LoadBalancer # Or use LoadBalancer if you're using Minikube with a cloud provider's driver
  ports:
    - name: db
      port: 27018
      targetPort: 27018
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: depictio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: depictio
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      name: http
      targetPort: 9000
    - port: 9001
      name: console
      targetPort: 9001
  selector:
    app: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depictio-backend
  namespace: depictio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depictio-backend
  template:
    metadata:
      labels:
        app: depictio-backend
    spec:
      containers:
        - name: depictio-backend
          # image: registry.git.embl.de/tweber/depictio/depictio:latest
          image: depictio:latest
          imagePullPolicy: Never
          command: ["python", "/app/depictio/api/run.py"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: depictio-src
              mountPath: /app/depictio
            - name: data
              mountPath: /app/data
            - name: minio-data
              mountPath: /app/minio_data
            - name: configs
              mountPath: /app/configs
            - name: kubernetes
              mountPath: /app/kubernetes
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: depictio-src
          hostPath:
            path: /app/depictio
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /app/data
            type: DirectoryOrCreate
        - name: minio-data
          hostPath:
            path: /app/minio_data
            type: DirectoryOrCreate
        - name: configs
          hostPath:
            path: /app/configs
            type: DirectoryOrCreate
        - name: kubernetes
          hostPath:
            path: /app/kubernetes
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: depictio-backend
  namespace: depictio
spec:
  selector:
    app: depictio-backend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depictio-frontend
  namespace: depictio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depictio-frontend
  template:
    metadata:
      labels:
        app: depictio-frontend
    spec:
      containers:
        - name: depictio-frontend
          image: depictio:latest
          imagePullPolicy: Never
          # image: registry.git.embl.de/tweber/depictio/depictio:latest
          command: ["python", "/app/depictio/dash/app.py"]
          ports:
            - containerPort: 5080
          volumeMounts:
            - name: depictio-src
              mountPath: /app/depictio
            - name: data
              mountPath: /app/data
            - name: minio-data
              mountPath: /app/minio_data
            - name: configs
              mountPath: /app/configs
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: depictio-src
          hostPath:
            path: /app/depictio
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /app/data
            type: DirectoryOrCreate
        - name: minio-data
          hostPath:
            path: /app/minio_data
            type: DirectoryOrCreate
        - name: configs
          hostPath:
            path: /app/configs
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: depictio-frontend
  namespace: depictio
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5080
  selector:
    app: depictio-frontend
