kubernetes/mongo-kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        command: ["mongod", "--dbpath", "/data/depictioDB_K8S", "--port", "27018"]
        ports:
        - containerPort: 27018
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/depictioDB
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: NodePort # Or use LoadBalancer if you're using Minikube with a cloud provider's driver
  ports:
  - port: 27018
    targetPort: 27018
    nodePort: 32000 # Minikube will allocate a port if you don't specify one
  selector:
    app: mongo
